<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@color/colorHintergrund">


    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="23dp"
        android:textStyle="bold"
        android:textColor="@color/colorTextfarbe"
        android:text="@string/mainActivity_menu_help_ueberschrift" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorTextfarbe"
        android:layout_marginTop="10dp"
        android:text="@string/mainActivity_menu_help_schritt1_ueberschrift" />


    <TextView
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTextfarbe"
        android:textSize="16dp"
        android:text="@string/mainActivity_menu_help_schritt1_text" />


    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorTextfarbe"
        android:text="@string/mainActivity_menu_help_schritt2_ueberschrift" />


    <TextView
        android:id="@+id/textView13"
        android:textColor="@color/colorTextfarbe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:text="@string/mainActivity_menu_help_schritt2_text" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorTextfarbe"
        android:layout_marginTop="10dp"
        android:text="@string/mainActivity_menu_help_schritt3_ueberschrift" />


    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textColor="@color/colorTextfarbe"
        android:text="@string/mainActivity_menu_help_schritt3_text" />


    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTextfarbe"
        android:textSize="22dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/mainActivity_menu_help_fertig" />

    <Button
        android:id="@+id/button_dialo_hilfe_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="0.06"
        android:background="@color/colorButtonfarbe"
        android:text="OK"
        android:textAllCaps="false"
        android:textColor="@color/colorTextfarbe"
        android:textSize="20dp" />



</LinearLayout>
