<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:title="@string/base64Activity_title"
        app:theme="@style/ToolBarStyle"
        android:background="?attr/colorPrimary"
        android:layout_centerHorizontal="true" />



    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="0dp"
        android:background="@color/colorHintergrund"
        android:layout_below="@id/toolbar"

        android:fillViewport="false">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextfarbe"
                android:textSize="20dp"
                android:layout_margin="10dp"
                android:text="@string/allActivitys_keylaenge_ueberschrift_single" />


            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/checkBox_64bits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorTextfarbe"
                android:textSize="20dp"
                app:buttonTint="@color/colorTextfarbe"
                android:text="64 Bits" />




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextfarbe"
                android:textSize="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="0dp"
                android:text="@string/allActivitys_filename_ueberschrift" />


            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/checkbox_defaultfilename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorTextfarbe"
                android:textSize="20dp"
                app:buttonTint="@color/colorTextfarbe"
                android:checked="true"
                android:text="@string/allActivitys_filename_default" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/checkbox_costumfilename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorTextfarbe"
                android:textSize="20dp"
                app:buttonTint="@color/colorTextfarbe"
                android:text="@string/allActivitys_filename_costum" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*"
                android:shrinkColumns="*">

                <TableRow>

                    <EditText
                        android:id="@+id/editText_key"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:layout_margin="10dp"

                        android:maxLines="1"
                        android:padding="10dp"
                        android:inputType="text"
                        android:hint="secretkey"/>



                </TableRow>

            </TableLayout>




            <Button
                android:id="@+id/button_generate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.06"
                android:background="@color/colorButtonfarbe"
                android:text="@string/allActivitys_btn_generatekey_single"
                android:layout_marginBottom="15dp"
                android:textColor="@color/colorTextfarbe"
                android:textAllCaps="false"
                android:textSize="20dp" />









        </LinearLayout>
    </ScrollView>
</RelativeLayout>