<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">



    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_affine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:title="@string/rot13Activity_tilte"
        app:theme="@style/ToolBarStyle"
        android:background="?attr/colorPrimary"
        android:layout_centerHorizontal="true" />




    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="0dp"
        android:layout_below="@id/toolbar_affine"
        android:background="@color/colorHintergrund"
        android:fillViewport="false"
        >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextfarbe"
                android:textSize="20dp"
                android:layout_margin="10dp"
                android:text="@string/allActivitys_eingabe_ueberschrift" />

            <EditText
                android:id="@+id/editText_eingabe_affine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:inputType="textCapCharacters"
                android:maxLines="20"

                />







            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shrinkColumns="*"
                android:stretchColumns="*"
                >
                <TableRow
                    android:layout_width="0dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorTextfarbe"
                        android:textSize="20dp"
                        android:layout_margin="10dp"
                        android:text="@string/allActivitys_wertA_ueberschrift" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorTextfarbe"
                        android:textSize="20dp"
                        android:layout_margin="10dp"
                        android:text="@string/allActivitys_wertB_ueberschrift" />

                </TableRow>
                <TableRow
                    android:layout_width="0dp">
                    <EditText
                        android:id="@+id/editText_wertA_affine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:textAlignment="center"
                        android:maxLines="1"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        />

                    <EditText
                        android:id="@+id/editText_wertB_affine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:textAlignment="center"
                        android:maxLines="1"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        />

                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/button_versschluesseln_affine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.06"
                android:background="@color/colorButtonfarbe"
                android:text="@string/allActivitys_btn_verschluesseln"
                android:layout_marginBottom="15dp"
                android:textColor="@color/colorTextfarbe"
                android:textAllCaps="false"
                android:textSize="20dp" />

            <Button
                android:id="@+id/button_entschluesseln_affine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.06"
                android:background="@color/colorButtonfarbe"
                android:text="@string/allActivitys_btn_entschluesseln"
                android:layout_marginBottom="15dp"
                android:textColor="@color/colorTextfarbe"
                android:textAllCaps="false"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextfarbe"
                android:textSize="20dp"
                android:layout_margin="10dp"
                android:layout_marginBottom="0dp"
                android:text="@string/allActivitys_ausgabe_ueberschrift" />




            <EditText
                android:id="@+id/textview_ausgabe_affine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:maxLines="30"
                android:textSize="20dp"
                />






        </LinearLayout>
    </ScrollView>






</RelativeLayout>